<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_text_lay_out_project_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:hint="@string/resume_input_project_name"
                app:errorTextColor="@color/error">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_project_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/CustomTextAppearance" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_text_lay_out_team_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:hint="@string/resume_input_team_size"
                app:errorTextColor="@color/error">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_team_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/CustomTextAppearance" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_text_lay_out_project_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:hint="@string/resume_input_project_summary"
                app:errorTextColor="@color/error">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_project_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/CustomTextAppearance" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_text_lay_out_technology_used"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:hint="@string/resume_input_technology_used"
                app:errorTextColor="@color/error">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_technology_used"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/CustomTextAppearance" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_text_lay_out_role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:hint="@string/resume_input_role"
                app:errorTextColor="@color/error">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_role"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/CustomTextAppearance" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_add_project_details"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginEnd="@dimen/spacing_24"
                android:background="@color/green"
                android:text="@string/resume_input_add"
                android:textAppearance="@style/CustomTextAppearance"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.appcompat.widget.AppCompatButton>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </com.google.android.material.card.MaterialCardView>

</layout>