<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_view_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resume_input_class"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_passing_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resume_input_passing_year"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_percentage_gpa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="@string/resume_input_percentage_gpa"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_class" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/text_view_percentage_gpa"
                android:layout_marginTop="@dimen/spacing_small"
                app:layout_constraintBottom_toBottomOf="parent">
            </View>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>